--- a/data_preprocessing/main.ipynb
+++ b/data_preprocessing/main.ipynb
@@ -18,24 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /home/prince/Desktop/content/projects/multilingual_health_chatbot/venv/lib/python3.10/site-packages (2.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/prince/Desktop/content/projects/multilingual_health_chatbot/venv/lib/python3.10/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/prince/Desktop/content/projects/multilingual_health_chatbot/venv/lib/python3.10/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/prince/Desktop/content/projects/multilingual_health_chatbot/venv/lib/python3.10/site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: numpy>=1.22.4 in /home/prince/Desktop/content/projects/multilingual_health_chatbot/venv/lib/python3.10/site-packages (from pandas) (2.1.1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/prince/Desktop/content/projects/multilingual_health_chatbot/venv/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+      "^C\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install pandas"
+    "%pip install pandas"
    ]
   },
   {
@@ -47,16 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\achim\\anaconda3\\envs\\crawl4ai\\lib\\site-packages (2.2.3)\n",
+      "Requirement already satisfied: numpy>=1.23.2 in c:\\users\\achim\\anaconda3\\envs\\crawl4ai\\lib\\site-packages (from pandas) (2.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\achim\\anaconda3\\envs\\crawl4ai\\lib\\site-packages (from pandas) (2.9.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\achim\\anaconda3\\envs\\crawl4ai\\lib\\site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\achim\\appdata\\roaming\\python\\python311\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\achim\\anaconda3\\envs\\crawl4ai\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +149,7 @@
        "4  Gastroesophageal reflux disease, or GERD, is a...                                                                                                                                                          "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +259,7 @@
        "4                     exercise  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +298,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +323,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +360,7 @@
        "Index(['Disease', 'Description'], dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +382,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +409,7 @@
        "(40, 2)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +429,7 @@
        "(40, 5)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +458,7 @@
        "(37, 6)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +574,7 @@
        "4  maintain healthy weight                     exercise  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +690,7 @@
        "4  maintain healthy weight                     exercise  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1167,7 @@
        "4  Disease: GERD Description: Gastroesophageal re...  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1201,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "crawl4ai",
    "language": "python",
    "name": "python3"
   },
@@ -1241,7 +1250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
